Adjusted tab logo placement and tab overlap to resolve #162 and #155.

--- a/components/03 - global/site-name/_site-name.scss
+++ b/components/03 - global/site-name/_site-name.scss
@@ -13,12 +13,12 @@
 
   @include breakpoint(menu) {
     flex-basis: content;
-    margin: 0 0 0 20px;
+    margin: 5px 0 0 20px;
     font-size: calc(100% + 1.4vw);
   }
 
   @include breakpoint(container) {
-    margin: 0 0 0 20px;
+    margin: 5px 0 0 20px;
     text-align: left;
     font-size: 2.2rem;
   }
